--- a/README.html
+++ b/README.html
@@ -557,7 +557,7 @@ manually if needed.</li>
 <h2>📘 Further Details</h2>
 <p>For a detailed explanation of method-specific workflows, including
 variable selection, model fitting, and effect estimation:</p>
-<p>➡️ See <a href="MethodWorkflows.html">MethodWorkflows</a></p>
+<p>➡️ See <a href="MethodWorkflows.md">MethodWorkflows</a></p>
 <hr />
 </div>
 <div id="notes" class="section level2">
